        Reviewed by Darin.

<rdar://problem/4960112>
        http://bugs.webkit.org/show_bug.cgi?id=12417
        REGRESSION: "Are you sure you want to send a form again?" sheet is displayed twice (validator.w3.org)

        The problem was that doing a reload would cause the "Cache-Control" HTTP header to be set on the request _after_ the first
        navigation policy delegate callback was called. This would break the request equality check that's used to prevent multiple policy
        delegate callbacks from getting called for the same request. The solution is to set the header as early as possible.

        This patch also fixes some bugs in the ResourceRequest equality operator.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::reload):
        Set the "Cache-Control" header field on the request here.

        * platform/network/FormData.h:
        (WebCore::operator==):
        Short-circuit if the pointers are the same.

        * platform/network/ResourceRequest.cpp:
        (WebCore::operator==):
        Check the equality of the objects, not the pointers.



Canonical link: https://commits.webkit.org/16507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19632 268f45cc-cd09-0410-ab3c-d52691b4dbfc